--- a/detail.html
+++ b/detail.html
@@ -27,7 +27,7 @@
       <div class="product_ifm">
         <div class="title_store">
           <a href="#"
-            ><span class="accent">리그오브레전드</span
+            ><span class="accent">LOL</span
             ><span class="accent"
               ><i class="fa-solid fa-circle-check"></i> 공식</span
             >
