--- a/detail.html
+++ b/detail.html
@@ -27,7 +27,7 @@
       <div class="product_ifm">
         <div class="title_store">
           <a href="#"
-            ><span class="accent">LOL</span
+            ><span class="accent">리그오브레전드</span
             ><span class="accent"
               ><i class="fa-solid fa-circle-check"></i> 공식</span
             >
@@ -53,7 +53,9 @@
             >이 상품에 적용 가능한
             <span class="accent_red">5% 할인</span> 쿠폰이 있어요</span
           >
-          <span>쿠폰받기</span>
+          <span class="coupon1"
+            >쿠폰받기 <i class="fa-solid fa-download"></i
+          ></span>
         </div>
         <div class="title_namebox">
           <div class="title_day">
@@ -66,8 +68,14 @@
               <ul>
                 <li>
                   <div class="dayday">
-                    <span>언제언제도착</span>
-                    <span>99%</span>
+                    <div class="dday">
+                      <span class="dayday1">도착확률정보</span>
+                    </div>
+                    <div class="ddday">
+                      <span class="dayday2">8/22(화) 도착</span>
+                      <progress class="gauge" value="78" max="100"></progress>
+                      <span class="dayday2">78%</span>
+                    </div>
                   </div>
                   <div class="dayinfo">
                     <span
@@ -84,38 +92,66 @@
             <span>CJ택배</span>
           </div>
           <div class="title_name">
-            <span>스마일카드 최대 2% 캐시적립</span>
+            <span>스마일카드 <span class="accent">최대 2%</span> 캐시적립</span>
           </div>
           <div class="title_name">
             <span>신세계포인트 적립</span>
           </div>
           <div class="title_name">
-            <span>결제수단 즉시할인 최대 10,000원</span>
+            <span
+              ><i class="fa-solid fa-credit-card"></i> 결제수단 즉시할인
+              <span class="accent">최대 10,000원</span></span
+            >
           </div>
           <div class="title_name">
-            <span>카드무이자</span>
-            <span>카드 추가혜택</span>
+            <span><i class="fa-solid fa-credit-card"></i> 카드무이자</span>
+            <span><i class="fa-regular fa-credit-card"></i> 카드 추가혜택</span>
           </div>
           <div class="title_name">
             <span>원산지 : 중국</span>
           </div>
         </div>
         <div class="banner">
-          <img src="" alt="" />
+          <img src="./images/2207_pc_vip_bn_img_01.png" alt="배너" />
         </div>
         <div class="result">
           <div class="item_number">
             <span>수량</span>
           </div>
-          <div class="item_result">
-            <button class="item_plus">수량증가</button>
-            <button class="item_minus">수량감소</button>
+          <div class="total">
+            <div class="item_result">
+              <button class="item_plus">-</button>
+              <input type="text" />
+              <button class="item_minus">+</button>
+            </div>
+            <div class="price_result">
+              <span>99000</span>
+            </div>
           </div>
-          <div class="price_result">
-            <span>99000</span>
+          <div class="total_price">
+            <span>99000원</span>
           </div>
         </div>
+        <div class="btn">
+          <button type="button" class="cart">
+            <i class="fa-solid fa-cart-shopping"></i> 장바구니
+          </button>
+          <button type="button" class="buy">
+            <i class="fa-regular fa-credit-card"></i> 구매하기
+          </button>
+        </div>
       </div>
+    </div>
+
+    <div class="tab">
+      <div><span>상세설명</span></div>
+      <div><span>구매후기</span></div>
+      <div><span>상품문의</span></div>
+      <div><span>교환/반품</span></div>
+    </div>
+
+    <div class="detail_photo row">
+      <img src="./images/Yone-Unlocked-Statue_01.jpg" alt="" />
     </div>
 
     <div class="store_footer"></div>
