--- a/index.html
+++ b/index.html
@@ -29,30 +29,47 @@
       <!-- 카테고리 -->
       <div class="wrap_nav">
         <nav class="nav_list">
-          <a href="#"><span>스태츄</span></a>
-          <a href="#"><span>피규어</span></a>
-          <a href="#"><span>악세사리</span></a>
-          <a href="#"><span>인형</span></a>
-          <a href="#"><span>티셔츠</span></a>
-          <a href="#"><span>후드티와 자켓</span></a>
-          <a href="#"><span>잠옷</span></a>
-          <a href="#"><span>서적/아트</span></a>
-          <a href="#"><span>보드게임</span></a>
-          <a href="#"><span>SALE</span></a>
+          <a href="#"><span>SPECIAL GOODS</span></a>
+          <a href="#"><span>NEW ITEM</span></a>
+          <a href="#"><span>STATUE</span></a>
+          <a href="#"><span>FIGURE</span></a>
+          <a href="#"><span>T-SHIRT</span></a>
         </nav>
       </div>
       <!-- 메인이미지 -->
       <div class="wrap_img">
-        <img
-          src="./images/fb3252767ff8554541d62a13c228af9a1608fdbe.jpg"
-          alt="메인이미지"
-        />
+        <ul>
+          <li>
+            <a href="javascript:;"></a
+            ><img src="./images/MAIN/main_1.jpg" alt="메인사진1" />
+          </li>
+          <li>
+            <a href="javascript:;"></a
+            ><img src="./images/MAIN/main_2.jpg" alt="메인사진2" />
+          </li>
+          <li>
+            <a href="javascript:;"></a
+            ><img src="./images/MAIN/main_3.jpg" alt="메인사진3" />
+          </li>
+          <li>
+            <a href="javascript:;"></a
+            ><img src="./images/MAIN/main_4.jpg" alt="메인사진4" />
+          </li>
+        </ul>
+        <div class="mbtn">
+          <button type="button">
+            <i class="fa-solid fa-angles-left"></i>
+          </button>
+          <button type="button">
+            <i class="fa-solid fa-angles-right"></i>
+          </button>
+        </div>
       </div>
       <!-- 스페셜상품 -->
       <div class="wrap_good">
-        <h2 class="title1_h2"></h2>
-        <div class="wrap_good_items">
-          <!-- <div class="wrap_item">
+        <!-- <h2 class="title1_h2"></h2>
+        <div class="wrap_good_items"> -->
+        <!-- <div class="wrap_item">
             <div class="box_item">
               <span class="option new" ::before>
                 <span class="option_text">NEW</span>
@@ -70,319 +87,37 @@
               <b>99,000원</b>
             </div>
           </div>-->
-        </div>
+        <!-- </div> -->
       </div>
-      <!-- 상품목록 -->
-      <!-- <div class="wrap_list"> -->
-      <!-- 신상품 New item -->
-      <!-- <div class="wrap_content1">
-          <h2 class="title2_h2">NEW ITEM</h2>
-          <div class="wrap_good_list"> -->
-      <!-- <div class="wrap_list">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-              <div class="list1_img">
-                <div class="back">
-                  <a href="detail.html"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>2023 발로란트 챔피언스 X GOALSTUDIO 반팔티 (화이트)</p>
-                <b>59,000원</b>
-              </div>
-            </div>
-            <div class="wrap_list2">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-              <div class="list2_img">
-                <div class="back">
-                  <a href="detail.html"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>2023 발로란트 챔피언스 X GOALSTUDIO 반팔티 (블랙)</p>
-                <b>59,000원</b>
-              </div>
-            </div>
-            <div class="wrap_list3">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-
-              <div class="list3_img">
-                <div class="back">
-                  <a href="#"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>요네 Unlocked 스태츄</p>
-                <b>99,000원</b>
-              </div>
-            </div>
-            <div class="wrap_list4">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-              <div class="list4_img">
-                <div class="back">
-                  <a href="#"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>요네 피규어</p>
-                <b>38,000원</b>
-              </div>
-            </div> -->
-      <!-- </div>
-        </div> -->
-      <!-- 스태츄 statue -->
-      <!-- <div class="wrap_content2">
-          <h2 class="title2_h2">STATUE</h2>
-          <div class="wrap_good_statue">
-            <div class="wrap_statue1">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-
-              <div class="statue1_img">
-                <div class="back">
-                  <a href="#"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>요네 Unlocked 스태츄</p>
-                <b>99,000원</b>
-              </div>
-            </div>
-            <div class="wrap_statue2">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-              <div class="statue2_img">
-                <div class="back">
-                  <a href="#"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>발로란트 킬조이 스태츄</p>
-                <b>240,000원</b>
-              </div>
-            </div>
-            <div class="wrap_statue3">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-
-              <div class="statue3_img">
-                <div class="back">
-                  <a href="#"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>미스 포츈 3D 프레임 (Infinity Studio)</p>
-                <b>170,000원</b>
-              </div>
-            </div>
-            <div class="wrap_statue4">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-              <div class="statue4_img">
-                <div class="back">
-                  <a href="#"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>가시 덩굴의 복수 자이라 1/4 스태츄 (Infinity Studio)</p>
-                <b>1,100,000원</b>
-              </div>
-            </div>
-          </div>
-        </div> -->
-      <!-- 피규어 Figure-->
-      <!-- <div class="wrap_content3">
-          <h2 class="title2_h2">FIGURE</h2>
-          <div class="wrap_good_figure">
-            <div class="wrap_figure1">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-
-              <div class="figure1_img">
-                <div class="back">
-                  <a href="#"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>요네 피규어</p>
-                <b>38,000원</b>
-              </div>
-            </div>
-            <div class="wrap_figure2">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-              <div class="figure2_img">
-                <div class="back">
-                  <a href="#"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>꿀잼 티모와 직스 디오라마 세트</p>
-                <b>92,000원</b>
-              </div>
-            </div>
-            <div class="wrap_figure3">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-
-              <div class="figure3_img">
-                <div class="back">
-                  <a href="#"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>꿀벌 포로 피규어(특별판)</p>
-                <b>45,000원</b>
-              </div>
-            </div>
-            <div class="wrap_figure4">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-              <div class="figure4_img">
-                <div class="back">
-                  <a href="#"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>전투 토끼 미스 포츈 피규어</p>
-                <b>42,000원</b>
-              </div>
-            </div>
-          </div>
-        </div> -->
-      <!-- 티셔츠 -->
-      <!-- <div class="wrap_content4">
-          <h2 class="title2_h2">T-SHIRT</h2>
-          <div class="wrap_good_shirt">
-            <div class="wrap_shirt1">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-
-              <div class="shirt1_img">
-                <div class="back">
-                  <a href="#"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>2023 MSI DEFY 풀오버 후드티</p>
-                <b>99,000원</b>
-              </div>
-            </div>
-            <div class="wrap_shirt2">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-              <div class="shirt2_img">
-                <div class="back">
-                  <a href="#"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>
-                  2023 발로란트 마스터스 겉옷<br />
-                  가디건
-                </p>
-                <b>210,000원</b>
-              </div>
-            </div>
-            <div class="wrap_shirt3">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-
-              <div class="shirt3_img">
-                <div class="back">
-                  <a href="#"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>2023 발로란트 챔피언스 한 번 더 반팔티</p>
-                <b>45,000원</b>
-              </div>
-            </div>
-            <div class="wrap_shirt4">
-              <div class="box_item">
-                <span class="option new" ::before>
-                  <span class="option_text">NEW</span>
-                </span>
-              </div>
-              <div class="shirt4_img">
-                <div class="back">
-                  <a href="#"><i class="fas fa-search"></i></a>
-                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                </div>
-              </div>
-              <div class="item_name">
-                <p>2023 발로란트 챔피언스 게코 집중조명 반팔티</p>
-                <b>49,000원</b>
-              </div>
-            </div>
-          </div>
-        </div> -->
     </div>
 
     <div class="store_footer"></div>
+
+    <script>
+      // 메인이미지 버튼
+      let count = 0;
+      $(".mbtn button") // 버튼 클릭
+        .eq(0) // 첫번째 버튼 클릭
+        .on("click", function () {
+          if (count > 0) {
+            $(".wrap_img ul").animate({
+              left: "+=980px", // 사진크기만큼 오른쪽으로 이동
+            });
+            count--;
+          }
+        });
+
+      $(".mbtn button") // 버튼 클릭
+        .eq(1) // 두번째 버튼 클릭
+        .on("click", function () {
+          if (count < 3) {
+            $(".wrap_img ul").animate({
+              left: "-=980px", // 사진크기만큼 왼쪽으로 이동
+            });
+            count++;
+          }
+        });
+    </script>
 
     <script src="./js/common.js"></script>
     <!-- json 데이터 비동기  -->
@@ -393,8 +128,8 @@
         url: "./js/data.json",
         dataType: "json",
         success: function (rdata) {
-          data = rdata.specialgoods;
-          usedata("특별상품");
+          data = rdata;
+          usedata("SPECIAL GOODS");
         },
         error: function (xhr) {
           alert(xhr.status + "/" + xhr.errorText);
