이미지경로변경

--- a/header.html
+++ b/header.html
@@ -4,24 +4,24 @@
     <a href="#"
       ><img
         id="riot-store"
-        src="./images/logo-1200-04b3cefafba917c9c571f9244fd28a1e.png"
-        alt="라이엇스토어"
+        src="./images/HEADER/riot_logo.jpg"
+        alt="리그오브레전드 로고"
     /></a>
     <a href="#"
       ><img
         id="Valorant"
-        src="https://www.leagueoflegends.co.kr/modules/riot-store/img/Valorant.png"
-        alt="발로란트"
+        src="./images/HEADER/Valorant_logo.jpg"
+        alt="발로란트 로고"
     /></a>
     <a id="riot-store_logo" href="#"
       ><img
         class="riot-store_logoimg"
-        src="https://www.leagueoflegends.co.kr/modules/riot-store/img/logo_riotstore.png?v=220721"
-        alt="라이엇스토어로고"
+        src="./images/HEADER/logo_riotstore.jpg"
+        alt="라이엇스토어 로고"
     /></a>
   </div>
   <div class="store_bag">
-    <a href="#" target="_blank"
+    <a href="./cart.html" target="_blank"
       ><i class="fa-solid fa-bag-shopping"></i> 장바구니</a
     >
 
@@ -31,7 +31,7 @@
         placeholder=" 상품을 입력하세요."
         style="border: 0 solid black"
       />
-      <img src="./images/icon_search.png" alt="" />
+      <img src="./images/HEADER/icon_search.jpg" alt="searchbox" />
     </div>
   </div>
 </div>
