--- a/footer.html
+++ b/footer.html
@@ -25,7 +25,7 @@
           >대표자: 조혁진 사업자등록번호 : 120-87-68488 통신판매업신고번호 : 제
           2011- 서울강남 - 02718호</span
         >
-        <img src="./images/footer.png" alt="라이엇로고" />
+        <img src="./images/FOOTER/footer.png" alt="라이엇로고" />
       </address>
     </div>
   </div>
