이미지주소변경

--- a/header.html
+++ b/header.html
@@ -1,36 +1,16 @@
 <!-- 헤더 사진등등-->
 <div class="wrap_head">
   <div class="lol_logo">
-    <a href="#"
-      ><img
-        id="riot-store"
-        src="./images/HEADER/riot_logo.jpg"
-        alt="리그오브레전드 로고"
-    /></a>
-    <a href="#"
-      ><img
-        id="Valorant"
-        src="./images/HEADER/Valorant_logo.jpg"
-        alt="발로란트 로고"
-    /></a>
-    <a id="riot-store_logo" href="#"
-      ><img
-        class="riot-store_logoimg"
-        src="./images/HEADER/logo_riotstore.jpg"
-        alt="라이엇스토어 로고"
-    /></a>
+    <a href="#"><img id="riot-store" src="./images/HEADER/riot_logo.jpg" alt="리그오브레전드 로고" /></a>
+    <a href="#"><img id="Valorant" src="./images/HEADER/Valorant_logo.jpg" alt="발로란트 로고" /></a>
+    <a id="riot-store_logo" href="index.html"><img class="riot-store_logoimg" src="./images/HEADER/logo_riotstore.jpg"
+        alt="라이엇스토어 로고" /></a>
   </div>
   <div class="store_bag">
-    <a href="./cart.html" target="_blank"
-      ><i class="fa-solid fa-bag-shopping"></i> 장바구니</a
-    >
+    <a href="./cart.html" target="_blank"><i class="fa-solid fa-bag-shopping"></i> 장바구니</a>
 
     <div class="search_box">
-      <input
-        type="text"
-        placeholder=" 상품을 입력하세요."
-        style="border: 0 solid black"
-      />
+      <input type="text" placeholder=" 상품을 입력하세요." style="border: 0 solid black" />
       <img src="./images/HEADER/icon_search.jpg" alt="searchbox" />
     </div>
   </div>
