--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/detail.css" />
+    <link rel="stylesheet" href="./css/cart.css" />
     <link rel="stylesheet" href="./css/hf.css" />
     <link
       rel="stylesheet"
@@ -26,10 +26,57 @@
   <body>
     <div class="wrap_head"></div>
 
-    <div></div>
+    <div class="cart_box row">
+      <div class="cart_header">
+        <div>
+          <h2>장바구니 <i class="fa-solid fa-cart-shopping"></i></h2>
+        </div>
+        <div class="step">
+          <ul>
+            <li class="onestep">
+              <span>장바구니</span><i class="fa-solid fa-angle-right"></i>
+            </li>
+            <li class="twostep">
+              <span>주문/결제</span><i class="fa-solid fa-angle-right"></i>
+            </li>
+            <li class="threestep"><span>주문완료</span></li>
+          </ul>
+        </div>
+      </div>
+      <section class="cart_section">
+        <div class="cart_Info">
+          <!-- <table border="1">
+            <colgroup>
+              <col />
+              <col />
+              <col />
+              <col />
+              <col />
+            </colgroup>
+            <thead>
+              <th>상품이미지</th>
+              <th>상품정보</th>
+              <th>수량</th>
+              <th>금액</th>
+              <th>선택</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>상품이미지</td>
+                <td>상품정보</td>
+                <td>수량</td>
+                <td>금액</td>
+                <td>선택</td>
+              </tr>
+            </tbody>
+          </table> -->
+        </div>
+      </section>
+    </div>
 
     <div class="store_footer"></div>
 
     <script src="./js/common.js"></script>
+    <script src="./js/cart.js"></script>
   </body>
 </html>
