--- a/cart.html
+++ b/cart.html
@@ -43,34 +43,10 @@
           </ul>
         </div>
       </div>
+
       <section class="cart_section">
-        <div class="cart_Info">
-          <!-- <table border="1">
-            <colgroup>
-              <col />
-              <col />
-              <col />
-              <col />
-              <col />
-            </colgroup>
-            <thead>
-              <th>상품이미지</th>
-              <th>상품정보</th>
-              <th>수량</th>
-              <th>금액</th>
-              <th>선택</th>
-            </thead>
-            <tbody>
-              <tr>
-                <td>상품이미지</td>
-                <td>상품정보</td>
-                <td>수량</td>
-                <td>금액</td>
-                <td>선택</td>
-              </tr>
-            </tbody>
-          </table> -->
-        </div>
+        <p></p>
+        <div class="cart_Info"></div>
       </section>
     </div>
 
