--- a/cart.html
+++ b/cart.html
@@ -45,14 +45,15 @@
       </div>
 
       <section class="cart_section">
-        <p></p>
-        <div class="cart_Info"></div>
+        <div class="cart_Info">
+          <p></p>
+        </div>
       </section>
     </div>
 
     <div class="store_footer"></div>
 
-    <script src="./js/common.js"></script>
+    <script src="./js/cart_common.js"></script>
     <script src="./js/cart.js"></script>
   </body>
 </html>
