--- a/detail.html
+++ b/detail.html
@@ -30,7 +30,7 @@
 
     <div class="store_footer"></div>
 
-    <script src="./js/common.js"></script>
+    <script src="./js/cart_common.js"></script>
     <script src="./js/detail.js"></script>
   </body>
 </html>
